--- a/01-Emmet/01-child.html
+++ b/01-Emmet/01-child.html
@@ -1,7 +1,14 @@
 <h1>Anidar > </h1>
 <h3>Ejemplo:</h3>
-ul>li>a     
+
+ul>li>a   
+
 <h3>Resultado:</h3>
-<ul>
-    <li><a href= ""></a></li>
-</ul>
+
+<xmp>
+    <ul>
+        <li><a href=""></a></li>
+    </ul>
+</xmp>
+
+
